--- a/lees-portfolio/public/index.html
+++ b/lees-portfolio/public/index.html
@@ -22,11 +22,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+
+  <!-- Open Graph meta tags for WhatsApp preview -->
+  <meta property="og:title" content="Ellaleedev">
+  <meta property="og:description" content="Ella Lee app developer portfolio">
+  <meta property="og:image" content="https://ellaleedev.netlify.app/site-thumbnail.png">
+  <meta property="og:url" content="https://ellaleedev.netlify.app">
+  <meta property="og:type" content="website">
+
+  <title>ellaleedev</title>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>Welcome to Ellaleedev</noscript>
   <div id="root"></div>
   <!--
       This HTML file is a template.
